Fixed alignment for frontend

--- a/src/blocks/tabs/style.scss
+++ b/src/blocks/tabs/style.scss
@@ -22,6 +22,7 @@
 		li.uagb-tab a {
 			position: relative;
 			padding: 6px 12px;
+			display: flex;
 		}
 
 		p {
@@ -37,6 +38,7 @@
 			align-items: center;
 
 			.uagb-tabs__icon {
+				display: flex;
 				align-self: center;
 			}
 		}
